welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value dies2
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 )  return a+b+1
                                 ^withoutDoubles:2: error: not found: value a
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 )  return a+b+1
                                                                     ^withoutDoubles:2: error: type mismatch;
 found   : Unit
 required: Int
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 )  return a+b+1
        ^